# llm_structured

./: .gitignore  README.md
cpp/: CMakeLists.txt  README.md
cpp/include/: llm_structured.hpp
cpp/src/: cli.cpp  llm_structured.cpp
cpp/test/: tests.cpp
python/: pyproject.toml  requirements-build.txt  setup.py
python/benchmark/: benchmark_llm_structured.py
python/bindings/: llm_structured_pybind.cpp
python/examples/: example_kv_validate.py  example_markdown_validate.py  example_schema_inference.py  example_sql_validate.py  example_structured_output.py  example_toml_parse.py  example_tool_calling.py  example_validation_repair.py  example_xml_html.py  example_yaml_parse.py
python/llm_structured/: __init__.py
python/test/: test_llm_structured.py  test_more_llm_structured.py
typescript/: binding.gyp  llm_structured.d.ts  package-lock.json  package.json  tsconfig.json
typescript/examples/: demo.ts  example_toml_parse.ts  example_tool_calling.ts  example_validation_repair.ts  example_xml_html.ts  example_yaml_parse.ts
typescript/src/: addon.cc  index.ts
typescript/test/: test.ts
